# sudoku-battle

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/: __init__.py  auth.py  database.py  models.py  server.py
backend/api/: games.py  history.py  leaderboards.py  users.py
backend/crud/: games.py  users.py
backend/schemas/: achievements.py  games.py  leaderboards.py  users.py
backend/sockets/: manager.py
bot/: bot.py
core/: config.py  constants.py  exceptions.py  generator.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: app.d.ts  app.html
frontend/src/lib/: config.ts  tma.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/leaderboard/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/sudoku/: +page.svelte
tests/: __init__.py  test_generator.py
